--- a/src/main/resources/com/iokays/template/vm/news.vm
+++ b/src/main/resources/com/iokays/template/vm/news.vm
@@ -31,7 +31,7 @@
 
 <header class="jumbotron subhead" id="overview">
     <div class="container" style="margin-top: 40px">
-
+        <img src="./image/${column.imageUrl}" style="top: 0;left: 0;min-width: 100%;height: 200px">
     </div>
 </header>
 
