--- a/src/main/resources/com/iokays/template/vm/index.vm
+++ b/src/main/resources/com/iokays/template/vm/index.vm
@@ -69,16 +69,16 @@
 
 </head>
 <body>
+
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
         <div class="container">
             <div class="nav-collapse collapse">
                 <ul class="nav">
                     <li class="active"><a href="./index.html">首页</a></li>
-                    <li class=""><a href="./news.html">公益资讯</a></li>
-                    <li class=""><a href="./together.html">与你共行</a></li>
-                    <li class=""><a href="./postulant.html">志愿者</a></li>
-                    <li class=""><a href="./about.html">关于公益</a></li>
+                    #foreach( $column_ in ${menus} )
+                        <li class=""><a href="${column_.marking}.html">${column_.name}</a></li>
+                    #end
                 </ul>
             </div>
         </div>
@@ -89,7 +89,7 @@
     <div class="carousel-inner">
         #foreach(${homePage_} in ${homePages})
             <div class="item #if($velocityCount == 1) active#end">
-                <img src="./image/${homePage_.url}" alt="">
+                <img src="./image/${homePage_.id}.jpg" alt="">
                 <div class="container"></div>
             </div>
         #end
@@ -100,75 +100,44 @@
 
 
 <div class="container">
-    <div class="row-fluid">
-        <div class="span4" >
-            <div>
-                <img src="image/img_06.jpg" class="img-polaroid">
-            </div>
-        </div>
-        <div class="span4">
-            <a href="./news.html" target="_blank"><span class="label label-info" style="font-size: 20px; color: yellow">公益资讯</span></a>
-            #foreach(${article_} in ${newsArticles})
-                <li>
-                    <ul class="inline">
-                        <li><span class="badge badge-info">${velocityCount}</span></li>
-                        <li><a href="./${article_[0]}.html" target="_blank" title="${article_[1]}"><span
-                                style="color: white">${article_[1]}</span></a></li>
-                        <!-- <li><span class="date_">object_[3]</span></li> -->
-                    </ul>
-                </li>
-            #end
 
-        </div>
-        
-        <div class="span4">
-        	<a href="zhongxin/zhuti/" target="_blank"><span class="label label-info" style="font-size: 20px; color: yellow">与你共行</span></a>
-            #foreach(${article_} in ${togetherArticles})
-                <li>
-                    <ul class="inline">
-                        <li><span class="badge badge-info">${velocityCount}</span></li>
-                        <li><a href="./${article_[0]}.html" target="_blank" title="${article_[1]}"><span
-                                style="color: white">${article_[1]}</span></a></li>
-                        <!-- <li><span class="date_">object_[3]</span></li> -->
-                    </ul>
-                </li>
-            #end
-        </div>
-    </div>
-    <div class="row-fluid" style="margin-top: 20px">
-        <div class="span4" >
-            <div>
+    <div class="row-fluid">
+
+        <div class="row-fluid span4" >
+            <div class="row">
+                <img src="image/img_06.jpg" class="img-polaroid">
+            </div>
+            <div class="row">
                 <img src="image/img_06.jpg" class="img-polaroid">
             </div>
         </div>
-        <div class="span4">
-        	<a href="zhongxin/zhuti/" target="_blank"><span class="label label-info" style="font-size: 20px; color: yellow">志愿者</span></a>
-            #foreach(${article_} in ${togetherArticles})
-                <li>
-                    <ul class="inline">
-                        <li><span class="badge badge-info">${velocityCount}</span></li>
-                        <li><a href="./${article_[0]}.html" target="_blank" title="${article_[1]}"><span
-                                style="color: white">${article_[1]}</span></a></li>
-                        <!-- <li><span class="date_">object_[3]</span></li> -->
-                    </ul>
-                </li>
-            #end
-            
-        </div>
         
-        <div class="span4">
-            <a href="zhongxin/zhuti/" target="_blank"><span class="label label-info" style="font-size: 20px; color: yellow">关于公益</span></a>
-            #foreach(${article_} in ${aboutArticles})
-                <li>
-                    <ul class="inline">
-                        <li><span class="badge badge-info">${velocityCount}</span></li>
-                        <li><a href="./${article_[0]}.html" target="_blank" title="${article_[1]}"><span
-                                style="color: white">${article_[1]}</span></a></li>
-                        <!-- <li><span class="date_">object_[3]</span></li> -->
-                    </ul>
-                </li>
-            #end
-        </div>
+        <div class="row-fluid span8" >
+            #foreach(${list} int ${row})
+                <div class="row-fluid">
+                    #foreach(${column_} int ${list}) 
+                    <div class="span6">
+                       <a href="./${column_.marking}.html" target="_blank"><span class="label label-info" style="font-size: 20px; color: yellow">${column_.name}</span></a>
+                        <ul class="inline">
+                            #foreach(${article_} in ${column_.articles})
+                                <li><span class="badge badge-info">${velocityCount}</span>
+                                <a href="./article/${article_.id}.html" target="_blank" title="${article_.title}"><span style="color: white">${article_.title}</span></a>
+                                </li>
+                            #end
+                        </ul>   
+                    </div>    
+                    #end
+                </div>    
+            #end     
+        </div> 
+
+
+
+    </div>
+
+        
+
+
     </div>
     
     <!-- footer start-->
@@ -184,8 +153,8 @@
 
 
 <script src="./dist/jquery/1.10.2/jquery.min.js"></script>
-
 <script src="./dist/bootstrap/2.3.2/js/bootstrap.js"></script>
+<script src="./dist/holder/holder.js"></script>
 
 <script>
     !function ($) {
@@ -195,6 +164,5 @@
     }(window.jQuery)
 </script>
 
-<script src="./dist/holder/holder.js"></script>
 </body>
 </html>
