--- a/src/main/resources/com/iokays/template/vm/menus.vm
+++ b/src/main/resources/com/iokays/template/vm/menus.vm
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>公益资讯</title>
+    <title>${column.name}</title>
 
     <link rel="stylesheet" href="dist/bootstrap/2.3.2/css/bootstrap.min.css" media="screen">
     <link rel="stylesheet" href="dist/bootstrap/2.3.2/css/bootstrap-responsive.min.css" media="screen">
@@ -19,10 +19,10 @@
             <div class="nav-collapse collapse">
                 <ul class="nav">
                     <li class=""><a href="./index.html">首页</a></li>
-                    <li class="active"><a href="./news.html">公益资讯</a></li>
-                    <li class=""><a href="./together.html">与你共行</a></li>
-                    <li class=""><a href="./postulant.html">志愿者</a></li>
-                    <li class=""><a href="./about.html">关于公益</a></li>
+                    #foreach( $column_ in ${menus} )
+                        <li class="#if($column_.id == $column.id) active #end"><a
+                                href="${column_.marking}.html">${column_.name}</a></li>
+                    #end
                 </ul>
             </div>
         </div>
@@ -31,7 +31,7 @@
 
 <header class="jumbotron subhead" id="overview">
     <div class="container" style="margin-top: 40px">
-        <img src="./image/${column.imageUrl}" style="top: 0;left: 0;min-width: 100%;height: 200px">
+        <img src="./image/${column.id}.jpg" style="top: 0;left: 0;min-width: 100%;height: 200px">
     </div>
 </header>
 
@@ -39,8 +39,7 @@
     <div>
         <ul class="breadcrumb">
             <li><a href="./index.html">首页</a> <span class="divider">/</span></li>
-            <li><a href="./news.html">公益资讯</a> <span class="divider">/</span></li>
-            <li class="active">最近资讯</li>
+            <li><a href="./${column.marking}.html">${column.name}</a> <span class="divider">/</span></li>
         </ul>
     </div>
 
@@ -49,17 +48,18 @@
             <div class="span2">
                 <ul class="dropdown-menu" role="menu"
                     style="display: block; position: static; margin-bottom: 5px; *width: 180px;">
-                    <li><a tabindex="-1" href="./news.html">公益资讯</a></li>
+                    <li><a tabindex="-1" href="./${column.marking}.html">${column.name}</a></li>
                     <li class="divider"></li>
-                    <li class="#if($column.marking == 'new') active #end"><a tabindex="-1" href="./new.html">最近资讯</a>
+                    #foreach($column_ in ${column.children})
+                        <li class=""><a tabindex="-1" href="./${column_.marking}.html">${column_.name}</a>
+                    #end
                     </li>
-                    <li class="#if($column.marking == 'weibo') active #end"><a tabindex="-1" href="./weibo.html">微博收集</a></li>
                 </ul>
             </div>
             <div  class="span10" style="margin-left:20px; margin-bottom:50px">
                 <ol>
                     #foreach(${article_} in ${articles})
-                        <li class=""><a tabindex="-1" href="./${article_[0]}.html">${article_[1]}</a></li>
+                        <li class=""><a tabindex="-1" href="./article/${article_.id}.html">${article_.title}</a></li>
                     #end
                 </ol>
             </div>
