--- a/src/main/resources/com/iokays/template/vm/article.vm
+++ b/src/main/resources/com/iokays/template/vm/article.vm
@@ -67,6 +67,53 @@
         </div>
 
     </div>
+
+    <div>
+
+        <div class="row">
+            <div id="alert" class="alert alert-error" style="display: none">
+                <button type="button" class="close">×</button>
+                <strong id="alert_text"></strong>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="span2 offset10"> <button class="btn btn-primary" type="button" onclick="hideStaticPageById('${article.id}')">不喜欢，删除它</button></div>
+        </div>
+
+    </div>
+
+    <div id="disqus_thread"></div>
+    
+    <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+        var disqus_shortname = 'loveiokays'; // required: replace example with your forum shortname
+
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+    
+
+    <script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+    var disqus_shortname = 'loveiokays'; // required: replace example with your forum shortname
+
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function () {
+        var s = document.createElement('script'); s.async = true;
+        s.type = 'text/javascript';
+        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+    </script>
+    
+   
 </div>
 
 <!-- footer start-->
@@ -77,19 +124,30 @@
 <!-- footer end-->
 
 
-<script src="dist/jquery/1.10.2/jquery.min.js"></script>
+<script src="../dist/jquery/1.10.2/jquery.min.js"></script>
 
-<script src="dist/bootstrap/2.3.2/js/bootstrap.js"></script>
+<script src="../dist/bootstrap/2.3.2/js/bootstrap.js"></script>
 
-<script>
-    !function ($) {
-        $(function () {
-            $('#myCarousel').carousel()
-        })
-    }(window.jQuery)
+<script type="text/javascript">
+    function hideStaticPageById(id) {
+        $.ajax({
+            type : "GET",
+            url : "../articles/" + id + "/hideStaticPage",
+            success : function(date) {
+                $("#alert").attr("class", "alert alert-success");
+                $("#alert_text").html("网页已删除！请告诉我 ....(数据物理删除) 请发送到: pengyuanbing@gmail.com");
+                $("#alert").css("display", "block");
+            },
+            error : function(XMLHttpRequest, textStatus, errorThrown) {
+                $("#alert").attr("class", "alert alert-error");
+                $("#alert_text").html("抱歉!...网页删除失败!");
+                $("#alert").css("display", "block");
+            }
+    });
+ }
 </script>
 
-<script src="../public/holder/holder.js"></script>
-<script src="../public/baidu/shangqiao.js"></script>
+
+<script src="../dist/holder/holder.js"></script>
 </body>
 </html>
