--- a/src/main/resources/com/iokays/template/vm/menus.vm
+++ b/src/main/resources/com/iokays/template/vm/menus.vm
@@ -77,8 +77,8 @@
 
 
 <script src="dist/jquery/1.10.2/jquery.min.js"></script>
-
 <script src="dist/bootstrap/2.3.2/js/bootstrap.js"></script>
+<script src="dist/holder/holder.js"></script>
 
 <script>
     !function ($) {
@@ -88,7 +88,6 @@
     }(window.jQuery)
 </script>
 
-<script src="../public/holder/holder.js"></script>
-<script src="../public/baidu/shangqiao.js"></script>
+<script src="../dist/holder/holder.js"></script>
 </body>
 </html>
