--- a/src/main/resources/com/iokays/template/vm/second.vm
+++ b/src/main/resources/com/iokays/template/vm/second.vm
@@ -80,6 +80,7 @@
 <script src="dist/jquery/1.10.2/jquery.min.js"></script>
 
 <script src="dist/bootstrap/2.3.2/js/bootstrap.js"></script>
+<script src="dist/holder/holder.js"></script>
 
 <script>
     !function ($) {
@@ -89,7 +90,5 @@
     }(window.jQuery)
 </script>
 
-<script src="../public/holder/holder.js"></script>
-<script src="../public/baidu/shangqiao.js"></script>
 </body>
 </html>
